[package]
name = "qr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line QR code generator for those who love tools that just work"

[dependencies]
qrcode = { version = "0.12.0", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
